k3s-manifests/uptime-kuma/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-kuma
  labels:
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/part-of: monitoring
