k3s-manifests/uptime-kuma/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/instance: uptime-kuma
    app.kubernetes.io/part-of: monitoring
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/instance: uptime-kuma
  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: http
